# pointcloud

./: CMakeLists.txt
inc/: OpencvHead.h  PCLHead.h  camera.h  pointcloud.h
src/: camera.cpp  pointcloud.cpp  seePLY.cpp
testcloud/: dy.ply
